<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".activities.FirstActivity">


    <ImageView
        android:id="@+id/ufanet_logo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ufanet_logo" />

    <TextView
        android:id="@+id/lastname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lastname_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/lastname_ed"
        app:layout_constraintTop_toBottomOf="@+id/ufanet_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastname_ed"
        android:layout_height="31dp"
        android:layout_width="301dp"
        android:background="@drawable/bg_ed"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_tv"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/name_ed"
        app:layout_constraintTop_toBottomOf="@+id/lastname_ed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_ed"
        android:layout_height="31dp"
        android:layout_width="301dp"
        android:background="@drawable/bg_ed"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv"/>

    <TextView
        android:id="@+id/surname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/surname_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/surname_ed"
        app:layout_constraintTop_toBottomOf="@+id/name_ed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/surname_ed"
        android:layout_height="31dp"
        android:layout_width="301dp"
        android:background="@drawable/bg_ed"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_tv"/>

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/phone_ed"
        app:layout_constraintTop_toBottomOf="@+id/surname_ed" />


        <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/phone_ed"
            android:layout_height="31dp"
            android:layout_width="301dp"
            android:background="@drawable/bg_ed"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            app:mask="+7 (___) ___ __ __"
            app:maskCharacter="_"
            app:maskStyle="completable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_tv"
        />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="172dp"
        android:layout_height="61dp"
        android:background="@drawable/bg_btn"
        android:text="@string/next_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/ufanet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />


</androidx.constraintlayout.widget.ConstraintLayout>