<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation = "10dp"
        app:cardCornerRadius = "20dp"
        android:layout_margin = "10dp"
        app:cardBackgroundColor = "@color/white"
        app:cardMaxElevation = "12dp"
        app:cardPreventCornerOverlap = "true"
        app:cardUseCompatPadding = "true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/name_text"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/user_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/lastname_text"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_name"/>

            <TextView
                android:id="@+id/user_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/surname_text"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_lastname"/>


            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_text"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                app:layout_constraintStart_toStartOf="@id/user_name"/>

            <TextView
                android:id="@+id/user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Адрес"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/user_phone"
                app:layout_constraintStart_toStartOf="@id/user_phone"/>

            <TextView
                android:id="@+id/user_tariff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Тариф"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_cabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Кабельное ТВ"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_tariff" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>
</RelativeLayout>