<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".activities.SecondActivity">
    <ImageView
        android:id="@+id/ufanet_logo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ufanet_logo"/>
    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/address_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/autoComplete_tv"
        app:layout_constraintTop_toBottomOf="@+id/ufanet_logo" />
    <AutoCompleteTextView
        android:id="@+id/autoComplete_tv"
        android:layout_height="31dp"
        android:layout_width="301dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_ed"
        android:paddingStart="10dp"
        android:textColorHint="@color/grey"
        android:hint="Уфа, Блюхера 21, 108"
        android:popupBackground="#ffffff"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_tv"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mode_icon"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/table1"
        app:layout_constraintTop_toTopOf="@+id/table1"/>

    <LinearLayout
        android:id="@+id/table1"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete_tv"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/active_text"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_name2"
                android:layout_width="match_parent"
                android:text="@string/advanced_text"
                android:layout_height="35dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <TextView
                android:id="@+id/tv_name3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/modern_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <!-- р/мес -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/active_tv1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <TextView
                android:id="@+id/advance_tv1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />
            <TextView
                android:id="@+id/modern_tv1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <!-- Мбит/сек -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/active_tv2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/advance_tv2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/modern_tv2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_guide_icon"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/table2"
        app:layout_constraintTop_toTopOf="@+id/table2"/>

    <LinearLayout
        android:id="@+id/table2"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table1"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/cabel_tv1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/cableTv_text"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cabel_tv2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="172dp"
        android:layout_height="61dp"
        android:background="@drawable/bg_btn"
        android:text="@string/save_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="172dp"
        android:layout_height="61dp"
        android:background="@drawable/bg_btn"
        android:text="@string/show_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/table2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/table2"
        app:layout_constraintTop_toTopOf="@+id/table2" />

</androidx.constraintlayout.widget.ConstraintLayout>